fix sckroll jump

--- a/views/assets/css/components/notification-block.css
+++ b/views/assets/css/components/notification-block.css
@@ -153,3 +153,9 @@
   }
 
 }
+
+@media (max-width: 992px) {
+  .notification-block{
+    top: 0;
+  }
+}
