--- a/views/assets/css/modal_boxes/event_modal.css
+++ b/views/assets/css/modal_boxes/event_modal.css
@@ -35,13 +35,13 @@
   margin-bottom: 3%;
 }
 /*.modal-body-input .form-3 .date input {*/
-  /*width: 100%;*/
-  /*font-size: 20px;*/
-  /*height: 45%;*/
+/*width: 100%;*/
+/*font-size: 20px;*/
+/*height: 45%;*/
 /*}*/
 /*.modal-body-input .form-3 .date label {*/
-  /*margin-bottom: 3%;*/
-  /*text-transform: uppercase;*/
+/*margin-bottom: 3%;*/
+/*text-transform: uppercase;*/
 /*}*/
 .modal-body-input .form-1 .date,
 .modal-body-input .form-1 .date button,
@@ -52,7 +52,7 @@
 .modal-body-input .form-1 .date,
 .modal-body-input .form-3 .date,
 .modal-body-input .form-2 .select,
-.modal-body-input .form-3 .select-2{
+.modal-body-input .form-3 .select-2 {
   width: 100%;
 }
 .modal-body-input .form-1 .date button {
@@ -71,7 +71,6 @@
   float: right;
   margin: 8px 0;
 }
-
 .modal-body-input .form-2 .span-image {
   margin-top: 10px;
   padding: 0 30px 0 10px;
@@ -100,10 +99,8 @@
   background: #4285f4;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
-
-
 .form-3 .select-2 .select-header-2,
-.form-2 .select .select-header{
+.form-2 .select .select-header {
   display: flex;
   flex-direction: row-reverse;
   background: #f5f5f5;
@@ -124,27 +121,25 @@
 .turn {
   transform: rotate(180deg);
 }
-
 .select-body-2,
 .select-body {
   overflow: hidden;
   height: 100px;
 }
-
 .js-select-hide-interviewers,
 .js-select-hide-candidates {
   overflow: auto;
 }
 .select-body-interviewers span,
 .select-body-candidates span {
-  margin-left:10px;
+  margin-left: 10px;
 }
 .form-3-footer,
 .form-2-footer {
   margin-top: 10px;
 }
 .form-3-footer span,
-.form-2-footer span  {
+.form-2-footer span {
   padding: 5px 10px 5px 10px;
   border: 1px solid #b2b2b2;
   border-radius: 5px;
@@ -152,4 +147,22 @@
 .form-3-footer span:hover,
 .form-2-footer span:hover {
   cursor: pointer;
+}
+@media (max-width: 500px) {
+  .date {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 400px) {
+  .select .select-header span,
+  .select-2 .select-header-2 span {
+    font-size: 12px;
+  }
+}
+@media (max-width: 319px) {
+  .select .select-header span,
+  .select-2 .select-header-2 span {
+    font-size: 10px;
+  }
 }
